# libdebugger

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  tox.toml
.github/workflows/: ci.yml
.hypothesis/constants/: 3318ce9f83cb7d5d  49684e6cb2ffa23d  55002d8a7dc13cbf  5ee2ee6e26adf3cd  676bf604a3cdddb3  6b70b50744bbd988  7531dd8986910efc  84647504d829714f  8769f6c4f7674eef  8f8068c2c39d2656  a9197f2b8ca86864  d4f49b9d35b2901f  d9b1c12cf89eb0e3  e1fc8bfc41414dc8  e623e5e57ecafc81
.hypothesis/examples/04e6b3400353b141/: 0ed3f3bea9ec271f  23baca684a4ce969  312292c2e7bf4e98  4fc307ed2e395c9d  8ed426caef129786  91f51210beb66018  aed02751fbbd3829  b6e8a22465fb1fd4  cc834086de3b5486  e2c082af123904c2  f0395dbb8d62d708
.hypothesis/examples/0ed3f3bea9ec271f/: f661d96fcd977a05
.hypothesis/examples/312292c2e7bf4e98/: 06a352600ac519b9  0e3209959463beaf  27b1ba102ef1f28f  31d582d8156be78a  33ff5744783d5024  8f2915bd9c0695be  989a1dd36e62d673  9f13ab3c667439ab  a13e0f5477cc8472  d401fd00a1f62367  db9607d3e3bb096e  e903e56a26638c71
.hypothesis/examples/8ed426caef129786/: b301890ddbf4d7b1
.hypothesis/examples/91f51210beb66018/: 09ad516d1cf564b2  219af727480c30f7  3712879ff4ff737d  3830967eac1628f5  3a7d76ef74f3bb2f  3ec4e795999f31f1  4d77d8b88692a97e  5603415dbcba02d6  70640924fa3623c5  71d875370d830a19  796a8013c645c685  7b6c1e61d24b3d88  7c285c2300bc7efb  859dc504c3be5ef0  87b1f2f94b27a790  8c254a2cd7e41954  9295eaa63ccf5b07  aab3ea8f0238829a  affe73e541ee34b6  b926f6a83d281814  c2df22720f396ef2  c9862ab49d2018d4  ce7e2e5006f1d091  cfe08b341bc8c065  e5340ce7ff756b25  f4a35447908bb5dc  f6df80bab82496e9
.hypothesis/examples/aed02751fbbd3829/: 05f2f21858463024  07350d548335fba1  08981775648044b3  10293ca7cc3af080  3414a5fffc551b1d  4446d380421b3b8d  49372ce73c59ada9  (+19 more)
example/: .env.example  README.md  app.py  probes.py  pyproject.toml  services.py  status.py
libdebugger/: __init__.py  breakpoint.py  bytecode.py  expression.py  file_utils.py  instrumentation.py  manager.py  program.py
libdebugger/pytest_stress/: __init__.py  discovery.py  plugin.py  reporter.py  tracker.py
test/: _manager_helpers.py  conftest.py  strategies.py  target.py  test_example_app_status.py  test_instrumentation.py  test_instrumentation_signatures.py  test_manager.py  test_manager_behavior.py  test_manager_concurrency.py  test_manager_exit_coverage.py  test_manager_integration.py  test_manager_probe_errors.py  test_manager_probe_firing.py  test_manager_property.py  test_manager_recursion.py  test_manager_registry_machine.py  test_manager_self_cleanup.py  test_pr6_review_findings.py  test_strategies.py  test_sys_monitoring.py
(+5 files in other folders)
