[project]
name = "libdebugger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bytecode>=0.17.0",
    "jsonpickle>=4.1.1",
    "posthoganalytics>=6.7.4",
]

[dependency-groups]
dev = [
    "hypothesis>=6.140.3",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
    "tox>=4.30.3",
]
