[project]
name = "libdebugger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bytecode>=0.17.0",
    "hogtrace",
    "jsonpickle>=4.1.1",
    "posthoganalytics>=6.7.4",
]

[dependency-groups]
dev = [
    "hypothesis>=6.140.3",
    "ipython>=8.18.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
    "tox>=4.30.3",
]

[tool.uv.sources]
hogtrace = { git = "https://github.com/PostHog/hogtrace" }

[project.entry-points.pytest11]
libdebugger_stress = "libdebugger.pytest_stress"

[tool.pytest.ini_options]
# Pytest-libdebugger-stress configuration
# Enable with: pytest --libdebugger-stress
# Or uncomment the line below to enable by default:
# libdebugger_stress_enabled = true
libdebugger_stress_num_functions = 30
libdebugger_stress_rotation_interval = 5
libdebugger_stress_max_reruns = 2
